fix color Contrast issues add default selected option in select component

--- a/src/assets/styles/_form.scss
+++ b/src/assets/styles/_form.scss
@@ -81,7 +81,7 @@ textarea {
   }
 }
 input{
-  color: var(--input-placeholder-color);
+  color: var(--input-value-color);
 }
 input:disabled,
 textarea:disabled,
