--- a/src/assets/styles/theme/light.scss
+++ b/src/assets/styles/theme/light.scss
@@ -55,7 +55,11 @@
   --input-sub-label-color: #67758d;
   --input-text-color: #67758d;
   --input-background-color: #FAFAFA;
+  --input-dropdown-background-color:#FAFAFA;
   --input-hover-background-color: #EFEFEF;
+  --input-value-color: #3E3E3E;
+
+
 
   // seperators
   --hr-color: #cbcbcb;
